--- a/main.html
+++ b/main.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accessible Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <header>
+        <h1 role="heading">My Accessible Portfolio</h1>
+        <nav role="navigation">
+            <ul role="list">
+                <li role="listitem"><a href="#about">About Me</a></li>
+                <li role="listitem"><a href="#projects">Projects</a></li>
+                <li role="listitem"><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="about">
+            <h2 role="heading">About Me</h2>
+            <img src="profile.jpg" alt="My Profile Picture" role="img">
+            <p>A passionate individual dedicated to creating accessible web content.</p>
+        </section>
+
+        <section id="projects">
+            <h2 role="heading">Projects</h2>
+            <ul role="list">
+                <li role="listitem">Project 1: Accessible Website</li>
+                <li role="listitem">Project 2: Inclusive Web Applications</li>
+                <li role="listitem">Project 3: Web Accessibility Audit</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2 role="heading">Contact</h2>
+            <p>Feel free to reach out to me via email at <a href="mailto:info@example.com">info@example.com</a>.</p>
+        </section>
+    </main>
 
 </body>
-
 </html>
